# test-pypi-qu4rkn3t

./: LICENSE  README.md  pyproject.toml
src/example_package/: __init__.py  core.py
